Rebuild Windows .exe launchers for Java 21 via launch4j (T050, 003)
The prebuilt iped.exe / IPED-SearchApp.exe selected a Java 11 from the
Windows registry and ignored the bundled jre/, so on a Java 21 build they
failed with UnsupportedClassVersionError (65.0 vs 55.0). They were also
opaque binary blobs with no config in the repo.

Replace them with reproducible generation: a launch4j-maven-plugin profile
(windows-launchers, auto-activated on Windows) in iped-app/pom.xml emits
both launchers at package time:
- iped.exe   : console, dontWrapJar -> iped.jar, jre <path>jre</path>
- IPED-SearchApp.exe : gui (in bin/), dontWrapJar -> ../lib/iped-search-app.jar,
  jre <path>../jre</path>, chdir ..
Both point at the bundled jre/ with NO minVersion (so the Windows registry
is never consulted) and pass -Djava.security.manager=allow. On Linux the
profile is inactive (a Windows .exe is irrelevant; shell launchers / iped.bat
are used).

The old Java-11 binaries are removed; the launcher icon was extracted to
resources/root/iped.ico. iped.bat is kept as a fallback.

Validated on Windows (Liberica 21):
- iped.exe -> Bootstrap runs on the bundled JRE 21 (clean "parameter -d
  required", i.e. no class-version error).
- IPED-SearchApp.exe -> full UI launches (BootstrapUI + App child), both
  java processes spawned from the bundled jre/ (tested in an iped-named
  folder, since Main.setConfigPath derives the root from iped/lib -> iped).

launch4j note: both the bundled jre <path> and the dontWrapJar <jar> are
resolved relative to the EXE directory (hence ../ for the bin/ launcher).

Docs: implementation-report.md, tasks.md (T050 done), iped-app/CLAUDE.md.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>